--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ actix-web = { version="1.0.0-beta.2" }
 serde = "1.0.90"
 serde_derive = "1.0.90"
 colored = "1.7"
-rug = "1.3.0"
+uuid = { version = "0.7", features = ["serde", "v4"] }
 envy = "0.4.0"
 log = "0.4.6"
 env_logger = "0.6.1"
-rusqlite = "0.18.0"
+rusqlite = "0.17.0"
+r2d2 = "0.8.4"
+r2d2_sqlite = "0.9.0"
