--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 publish = false
 
 [dependencies]
-actix-web = { version="1.0.0-beta.2" }
+actix-web = { version="1.0.0-beta.3" }
+actix-http = "0.1.5"
 serde = "1.0.90"
 serde_derive = "1.0.90"
 colored = "1.7"
