--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ r2d2_sqlite = "0.9.0"
 serde_json = "1.0.39"
 futures = "0.1.26"
 serde_rusqlite = "0.18.0"
+validator_derive = "0.8.0"
+validator = "0.8.0"
